# Pelmishki

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md  index.html
SDL_game/: Game.cpp  Game.hpp  GameObject.cpp  GameObject.hpp  InputHandler.cpp  InputHandler.hpp  Player.cpp  Player.hpp  TextureManager.cpp  TextureManager.hpp  Vector2D.hpp  main.cpp
SDL_game/Header Files/: Enemy.h  Game.h  Health.h  Player.h  PlayerHUD.h
SDL_game/Resourses/SDL_image/: .gitmodules  CMakeLists.txt
SDL_game/Resourses/SDL_image/VisualC/: SDL_image.vcxproj
SDL_game/Resourses/SDL_ttf/VisualC/: SDL_ttf.vcxproj
SDL_game/Source Files/: Enemy.cpp  Game.cpp  Game.h  Health.cpp  Player.cpp  PlayerHUD.cpp  main.cpp
